--- a/instagramapp/templates/base.html
+++ b/instagramapp/templates/base.html
@@ -9,7 +9,9 @@
   <title> The Image Gallery </title>
   {% endif %} {% block styles %} {% bootstrap_css %}
   <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
-  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet"> {% endblock %}
+  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  {% endblock %}
 </head>
 
 <body>
