--- a/instagramapp/templates/registration/base.html
+++ b/instagramapp/templates/registration/base.html
@@ -9,7 +9,9 @@
   <title> The Image Gallery </title>
   {% endif %} {% block styles %} {% bootstrap_css %}
   <link rel="stylesheet" href="{% static 'css/baseimages.css' %}">
-  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet"> {% endblock %}
+  <link href="https://fonts.googleapis.com/css?family=Grand+Hotel" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  {% endblock %}
   <script>
     UPLOADCARE_PUBLIC_KEY = '3a093d5b5e93b5c4cde5';
   </script>
