--- a/instagramapp/templates/registration/user_image_list.html
+++ b/instagramapp/templates/registration/user_image_list.html
@@ -4,11 +4,10 @@
 {% block content %}
 
 <div class="jumbotron text-center" style="background-color:white;">
-    <h1> Your Profile Page </h1>
-     <img src="{{profile.profilepic.url}}" class="img-thumbnail" id="eachimage1" style="height:100px;width:100px;"></a>
-    <p>{{profile.bio}}</p>
-    <button class="btn btn-lg btn-success"
-    ><a href=" {%url 'edit_profile'%}">Edit Profile</a></button>
+    <h1 style="font-family: 'Oswald', sans-serif;"> Your Profile Page </h1>
+     <img src="{{profile.profilepic.url}}" class="img-thumbnail" id="eachimage1" style="height:200px;width:150px;"></a>
+    <p style="font-family: 'Oswald', sans-serif;">{{profile.bio}}</p>
+    <button class="btn btn-lg btn-success" style="font-family: 'Oswald', sans-serif;"><a href=" {%url 'edit_profile'%}">Edit Profile</a></button>
     </div>
 
 <div class="container">
@@ -18,8 +17,8 @@
     <div class="card border-secondary"><a href="{% url 'image' image.id %}">
         <img src="{{image.image.url}}" class="img-fluid" id="eachimage"
           size="100px200"></a>
- <p> Caption : {{ image.description}}</p>
-      <p>Posted by : {{ image.user}}</p>
+ <p style="font-family: 'Oswald', sans-serif;"> Caption : {{ image.description}}</p>
+      <p style="font-family: 'Oswald', sans-serif;">Posted by : {{ image.user}}</p>
 
     </div>
     {% endfor %}
