--- a/instagramapp/templates/registration/user_image_list.html
+++ b/instagramapp/templates/registration/user_image_list.html
@@ -24,5 +24,29 @@
     {% endfor %}
   </div>
 </div>
+<div class="container">
+    <div class="col-md-12">
+      <div class="footer text-center">
+        <ul id="footer1">
+          <li>ABOUT US</li>
+          <li>SUPPORT</li>
+          <li>PRESS</li>
+          <li>API</li>
+          <li>JOBS</li>
+          <li>PRIVACY</li>
+          <li>TERMS</li>
+          <li>DIRECTORY</li>
+          <li>PROFILES</li>
+          <li>HASHTAGS</li>
+          <li>LANGUAGE</li>
+          <br>
+
+          <li style="font-size:10px;"> <strong>© 2018 MELISSA MALALA</strong></li>
+        </ul>
+
+      </div>
+
+    </div>
+  </div>
 
 {% endblock %}
