Added LIKE button

--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -16,6 +16,7 @@
 <div class="card mb-3" style="width:40rem;;">
   <img class="card-img-top" src="{{image.image.url}}" alt="Card image cap" class="img-fluid" size="100px200">
   <div class="card-body">
+    <button class="btn btn-lg btn-danger">Like This Image</button>
     <h5 class="card-title" style="font-family: 'Oswald', sans-serif;"><strong>Name Of Image:</strong>
       <br>
       {{image.name}}</h5>
