Final submission - need to add LIKES and FOLLOW later

--- a/instagramapp/templates/image.html
+++ b/instagramapp/templates/image.html
@@ -17,6 +17,23 @@
   <img class="card-img-top" src="{{image.image.url}}" alt="Card image cap" class="img-fluid" size="100px200">
   <div class="card-body">
     <button class="btn btn-lg btn-danger">Like This Image</button>
+
+
+
+
+    <!--*****************-->
+    <!--TESTING LIKE BUTTON-->
+
+    <a href="#" onClick="document.getElementById('likebutton').submit()">Like This Post</a> {{image.likes}}
+
+<form id="likebutton" method="POST" action="/posts/{{image.id}}/preference/1/">
+{% csrf_token %}
+<input type="hidden">
+</form>
+
+
+    <!--********************-->
+
     <h5 class="card-title" style="font-family: 'Oswald', sans-serif;"><strong>Name Of Image:</strong>
       <br>
       {{image.name}}</h5>
